# weather-station

./: Cargo.toml  weatherstation.service
src/: index.html  main.rs
