[package]
name = "weatherstation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dht22_pi = "1.0.0"
rouille = "3.6.2"
serde = { version = "1.0.193", features = ["derive"] }
sqlite = "0.32.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
